--- a/views/cars.ejs
+++ b/views/cars.ejs
@@ -7,6 +7,8 @@
     <title>Cars</title>
     <!-- links -->
     <link rel="stylesheet" href="../public/style.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
     <div class="customer-data">
@@ -29,13 +31,7 @@
                     <br>
                 <div class="car-price">
                     <p>
-                        <%= cars.price %>
-                    </p>
-                </div>
-                    <br>
-                <div class="release-year">
-                    <p>
-                        <%= cars.release_year %>
+                        $<%= cars.price %>
                     </p>
                 </div>
                     <br>
