--- a/views/cars.ejs
+++ b/views/cars.ejs
@@ -13,7 +13,7 @@
 <body>
     <div class="customer-data">
         <h3>Cars Available</h3>
-        <a href="admin/logout">Log out</a>
+        <a href="/customer_logout">Log out</a>
     </div>
 
     <div class="cards-container">
