--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,77 +1,60 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin</title>
-    <!-- links -->
-    <!-- <link rel="stylesheet" href="../public/style.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-    <div class="table_container">
-    
-        <div class="customer-data">
-            <h1>Customer Data</h1>
-            <h3>
-                <a href="admin/logout">Log out</a>
-            </h3>
-        </div>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">Customer ID</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Address</th>
-                    <th scope="col">Car ID</th>
-                    <th scope="col">Car Name</th>
-                    <th scope="col">Manufacturer</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Release Year</th>
-                    <th scope="col">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% Object.values(customers).forEach((customers)=> { %>
-                    <tr>
-                        <td>
-                            <%= customers.cust_id %>
-                        </td>
-                        <td>
-                            <%= customers.cust_name %>
-                        </td>
-                        <td>
-                            <%= customers.cust_address %>
-                        </td>
-                        <td>
-                            <%= customers.car_id %>
-                        </td>
-                        <td>
-                            <%= customers.car_name %>
-                        </td>
-                        <td>
-                            <%= customers.manufacturer %>
-                        </td>
-                        <td>
-                            <%= customers.price %>
-                        </td>
-                        <td>
-                            <%= customers.release_year %>
-                        </td>
-                        <td>
-                            <a href="#" class="btn btn-light">
-                                Edit
-                            </a>
-                            <a href="#" class="btn btn-danger">
-                                Delete
-                            </a>
-                        </td>
-                    </tr>
-                <% }) %>
-            </tbody>
-        </table>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Admin</title>
+		<!-- links -->
+		<!-- <link rel="stylesheet" href="../public/style.css"> -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+	</head>
+	<body>
+		<div class="table_container">
+			<div class="customer-data">
+				<h1>Customer Data</h1>
+				<h3>
+					<a href="/admin_logout">Log out</a>
+				</h3>
+			</div>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<!-- <th scope="col">Purchase ID</th> -->
+						<th scope="col">Name</th>
+						<th scope="col">Address</th>
+						<th scope="col">Car Name</th>
+						<th scope="col">Manufacturer</th>
+						<th scope="col">Price</th>
+						<th scope="col">Release Year</th>
+						<th scope="col">Action</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% Object.values(purchases).forEach((purchases)=> { %>
+					<tr>
+						<td> <%= purchases.purchase_id %> </td>
+						<td> <%= purchases.cust_name %> </td>
+						<td> <%= purchases.cust_address %> </td>
+						<td> <%= purchases.car_name %> </td>
+						<td> <%= purchases.manufacturer %> </td>
+						<td> <%= purchases.price %> </td>
+						<td> <%= purchases.release_year %> </td>
+						<td>
+							<a href="/admin/edit/#" class="btn btn-light"> Edit </a>
+							<a href="#" class="btn btn-danger"> Delete </a>
+						</td>
+					</tr>
+					<% }) %>
+				</tbody>
+			</table>
+		</div>
+	</body>
 </html>
